# trustcaptcha-rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
src/: captcha_manager.rs  errors.rs  lib.rs
src/model/: mod.rs  verification_result.rs  verification_token.rs
tests/: captcha_manager_tests.rs
