[package]
name = "trustcaptcha"
version = "0.1.0"
authors = ["TrustComponent <mail@trustcomponent.com>"]
edition = "2021"
description = "TrustCaptcha – Privacy-first CAPTCHA solution for Rust. GDPR-compliant, bot protection made in Europe."
license = "Apache-2.0"
keywords = ["captcha", "bot-protection", "gdpr", "privacy", "european-union"]
homepage = "https://www.trustcomponent.com/en/products/captcha/integrations/rust-captcha"
repository = "https://github.com/trustcomponent/trustcaptcha-rust"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] } #
serde_json = "1.0" #
log = "0.4"
env_logger = "0.11.3"
base64 = "0.22.1"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] } #

[lib]
name = "trustcaptcha"
crate-type = ["lib"]
